[package]
name = "ffmpeg-video-decoder"
version = "0.0.4"
edition = "2021"
authors = ["Nigecat <development@nigelq.com>"]

[features]
default = ["build"]
image = ["dep:image"]
build = ["ffmpeg/build"]

[dependencies]
thiserror = "1.0"
ffmpeg = { package = "ffmpeg-sys", version = "4.3.3" }

image = { version = "0.24", optional = true }
