[package]
name = "ffmpeg-video-decoder"
version = "2.0.0"
edition = "2021"
authors = ["Nigecat <development@nigelq.com>"]

[features]
default = []
image = ["dep:image"]

[dependencies]
thiserror = "1.0"
ffmpeg = { package = "ffmpeg-sys-the-third", version = "2.0.0" }

image = { version = "0.25", optional = true }
